--- a/src/components/scrollButton/scrollButton.css
+++ b/src/components/scrollButton/scrollButton.css
@@ -11,6 +11,7 @@
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: opacity 0.3s ease;
+  z-index: 1;
 }
 
 .scroll-to-top:hover {
